--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -8,15 +8,16 @@ flake8==3.8.4
 h11==0.11.0
 idna==2.10
 mccabe==0.6.1
-motor==2.5.1
+motorpip install -r requirements.txt
 mypy-extensions==0.4.3
 pathspec==0.8.1
 pycodestyle==2.6.0
 pydantic==1.7.3
 pyflakes==2.2.0
-pymongo==3.11.1
+pymongo
 regex==2020.11.13
 starlette==0.13.6
 toml==0.10.2
 typing-extensions==3.7.4.3
 uvicorn==0.12.3
+python-decouple
