--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.5.1",
+    "@mui/material": "^5.5.1",
     "@rjsf/core": "^4.0.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -10,11 +14,16 @@
     "axios": "^0.26.1",
     "bootstrap": "^4.5.2",
     "firebase": "^7.24.0",
-    "react": "^16.13.1",
+    "material-table": "^2.0.3",
+    "mui-datatables": "^4.1.2",
+    "react": "^17.0.2",
     "react-bootstrap": "^1.3.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "^17.0.0",
+    "react-native-gesture-handler": "^1.10.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "tss-react": "^3.5.2",
+    "yarn": "^1.22.17"
   },
   "scripts": {
     "start": "react-scripts start",
