--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@mui/material": "^5.5.1",
     "@rjsf/core": "^4.0.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -13,6 +16,7 @@
     "bootstrap": "^4.5.2",
     "firebase": "^7.24.0",
     "material-table": "^2.0.3",
+    "mui-datatables": "^3.8.5",
     "react": "^17.0.2",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^17.0.0",
