--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^4.5.2",
     "firebase": "^7.24.0",
     "firepit": "^0.0.0",
+    "http-server": "^14.1.0",
     "material-table": "^2.0.3",
     "mui-datatables": "^3.8.5",
     "react": "^17.0.2",
